# DataGraphVisualization

./: README.md  gitignore  requirements.txt  script.bat
api/src/services/: base_provider.py  base_service.py  base_visualizer.py
api/src/types/: config.py  graph.py
block_visualizer/: pyproject.toml
block_visualizer/src/block_visualizer_plugin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
block_visualizer/src/plugin/: block_visualizer.py  visualization.html
core/src/models/: plugin.py  plugin_model.py  tree.py
core/src/use_cases/: loader.py  main_view.py  tree_view.py
football_data_source/: pyproject.toml
football_data_source/src/football_data_source_plugin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
football_data_source/src/plugin/: data_source.py
graph_visualization/: db.sqlite3  manage.py
graph_visualization/app/: urls.py  views.py
graph_visualization/app/static/: style.css
graph_visualization/app/templates/: base.html  bird_view.html  index.html  main_view.html  tree_template.html  tree_view.html
graph_visualization/graph_visualization/: asgi.py  settings.py  urls.py  wsgi.py
hotel_data_soruce/: pyproject.toml
hotel_data_soruce/src/hotel_data_source_plugin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
hotel_data_soruce/src/plugin/: data_source.py
simple_visualizer/: pyproject.toml
simple_visualizer/src/plugin/: simple_visualizer.py  visualization.html
simple_visualizer/src/simple_visualizer_plugin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
