[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_visualizer_plugin"
authors = [
    {name = "Ana Poparic"}
]
description = "Simple visualizer plugin for graph visualization"
requires-python = ">=3.7"
version = "0.1"
dependencies = [
    "jinja2>=3.1.2"
]

[project.scripts]

[project.entry-points."graph.visualizers"]
load = "plugin.simple_visualizer"